--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.7",
@@ -11,16 +15,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.12",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.0.0",
-    "primereact": "^10.0.9",
+    "primereact": "^10.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^6.5.2",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
