--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-time-picker": "^6.5.2",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
