--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "framer-motion": "^10.16.12",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
