--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.0.0",
+    "mdbreact": "^5.2.0",
     "primereact": "^10.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
